# mint

./: .gitignore  CMakeLists.txt  README.adoc  README.md  mint.hpp
tests/: test_mint.py
tests/testers/: CMakeLists.txt  escape-ansi-tester.cpp  escape-tester.cpp  has-terminal-support-errno-tester.cpp  has-terminal-support-tester.cpp  mint-tester.cpp  terminal-support-errno-tester.cpp  terminal-support-tester.cpp
